--- a/WebResumen/Views/AutoClaveA/Index.cshtml
+++ b/WebResumen/Views/AutoClaveA/Index.cshtml
@@ -7,14 +7,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>NF8387A </h1>
+<h2> Ciclos Esterilización Producto NF8387A </h2>
 
 
 
 @if (TempData["Print"] != null)
 {
 
-    
+
 
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         <strong>@TempData["Print"].ToString()!</strong>
@@ -29,9 +29,10 @@
 
 
 
-<p>
-    @*<a asp-action="Create">Create New</a>*@
 
+
+@*<a asp-action="Create">Create New</a>*@
+<div class="mt-4">
     @using (Html.BeginForm())
     {
 
@@ -46,14 +47,29 @@
             <input type="submit" value="Buscar" />
         </form>
 
-
-
     }
+    <a class="btn btn-blue float-right" asp-area="" asp-controller="AutoClaveA" asp-action="CycleList">Listado</a>
+</div>
+
+
+    @*<div class="container-fluid">
+
+        <div class="row">
+            <div class="col-12"></div>
+            <div class="col-12"><a class="btn btn-blue float-right" asp-area="" asp-controller="AutoClaveA" asp-action="CycleList">Listado</a></div>
+        </div>
+    </div>*@
+
+
+
+
+
+
     <div class="mt-4" style="height: 600px; overflow: auto;">
         <table class="table table-responsive-sm">
             <thead class="thead-dark">
                 <tr>
-                   
+
                     <th>
                         @Html.DisplayNameFor(model => model.NumeroCiclo)
                     </th>
@@ -61,7 +77,7 @@
                         @Html.DisplayNameFor(model => model.Programa)
                     </th>
 
-                    
+
                     <th>
                         @Html.DisplayNameFor(model => model.HoraInicio)
                     </th>
@@ -71,7 +87,7 @@
                     <th>
                         Acciones
                     </th>
-                    
+
 
                 </tr>
             </thead>
@@ -79,26 +95,26 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        
+
                         <td>
                             @Html.DisplayFor(modelItem => item.NumeroCiclo)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Programa)
                         </td>
-                       
+
                         <td>
                             @Html.DisplayFor(modelItem => item.HoraInicio)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.HoraFin)
                         </td>
-                        
+
                         <td>
-                         
+
                             <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Ver</a>
                             <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">Imprimir</a>
-                           
+
 
 
 
