--- a/WebResumen/Views/AutoClaveC/Index.cshtml
+++ b/WebResumen/Views/AutoClaveC/Index.cshtml
@@ -7,9 +7,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>
-    8389C
-</h1>
+<h2>
+    Ciclos Esterilización Producto 8389C
+</h2>
 
 <p>
     @*<a asp-action="Create">Create New</a>*@
@@ -25,11 +25,9 @@
     </div>
 
 }
-@using (Html.BeginForm())
-{
-    <p>
-
-
+<div class="mt-4">
+    @using (Html.BeginForm())
+    {
 
         <form>
             Buscar por Nº Ciclo: @Html.TextBox("nCiclo")
@@ -40,10 +38,11 @@
 
             <input type="submit" value="Buscar" />
         </form>
-    </p>
+        <a class="btn btn-blue float-right" asp-area="" asp-controller="AutoClaveC" asp-action="CycleList">Listado</a>
+    }
+</div>
 
 
-}
 <div class="mt-4" style="height: 600px; overflow: auto;">
     <table class="table table-responsive-sm">
         <thead class="thead-dark">
