--- a/WebResumen/Views/AutoClaveD/Index.cshtml
+++ b/WebResumen/Views/AutoClaveD/Index.cshtml
@@ -6,9 +6,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>
-    8607D
-</h1>
+<h2>
+    Ciclos Esterilización Producto 8607D
+</h2>
 
 <p>
     @*<a asp-action="Create">Create New</a>*@
@@ -24,12 +24,9 @@
     </div>
 
 }
-@using (Html.BeginForm())
-{
-    <p>
-
-
-
+<div class="mt-4">
+    @using (Html.BeginForm())
+    {
         <form>
             Buscar por Nº Ciclo: @Html.TextBox("nCiclo")
             Buscar por Nº Programa: @Html.TextBox("nPrograma")
@@ -39,10 +36,12 @@
 
             <input type="submit" value="Buscar" />
         </form>
-    </p>
+
+        <a class="btn btn-blue float-right" asp-area="" asp-controller="AutoClaveD" asp-action="CycleList">Listado</a>
+    }
+</div>
 
 
-}
 
 <div class="mt-4" style="height: 600px; overflow: auto;">
     <table class="table table-responsive-sm">
