--- a/WebResumen/Views/AutoClaveG/Index.cshtml
+++ b/WebResumen/Views/AutoClaveG/Index.cshtml
@@ -11,9 +11,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>
-    NF1031G
-</h1>
+<h2>
+    Ciclos Esterilización Producto NF1031G
+</h2>
 
 
 
@@ -31,11 +31,9 @@
     </div>
 
 }
-@using (Html.BeginForm())
-{
-    <p>
-
-
+<div class="mt-4">
+    @using (Html.BeginForm())
+    {
 
         <form>
             Buscar por Nº Ciclo: @Html.TextBox("nCiclo")
@@ -46,82 +44,82 @@
 
             <input type="submit" value="Buscar" />
         </form>
-    </p>
+        <a class="btn btn-blue float-right" asp-area="" asp-controller="AutoClaveG" asp-action="CycleList">Listado</a>
 
-
-}
-<div class="mt-4" style="height: 600px; overflow: auto;">
-    <table class="table table-responsive-sm">
-        <thead class="thead-dark">
-            <tr>
-
-                <th>
-                    @Html.DisplayNameFor(model => model.NumeroCiclo)
-                    @*NumeroCiclo*@
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Programa)
-                    @*Programa*@
-                </th>
-
-                <th>
-                    @Html.DisplayNameFor(model => model.HoraInicio)
-                    @*HoraInicio*@
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.HoraFin)
-                    @*HoraFin*@
-                </th>
-                <th>
-                    Acciones
-                </th>
-
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+    }
+</div>
+    <div class="mt-4" style="height: 600px; overflow: auto;">
+        <table class="table table-responsive-sm">
+            <thead class="thead-dark">
                 <tr>
 
-                    <td>
-                        @Html.DisplayFor(modelItem => item.NumeroCiclo)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Programa)
-                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.NumeroCiclo)
+                        @*NumeroCiclo*@
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Programa)
+                        @*Programa*@
+                    </th>
 
-                    <td>
-                        @Html.DisplayFor(modelItem => item.HoraInicio)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.HoraFin)
-                    </td>
+                    <th>
+                        @Html.DisplayNameFor(model => model.HoraInicio)
+                        @*HoraInicio*@
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.HoraFin)
+                        @*HoraFin*@
+                    </th>
+                    <th>
+                        Acciones
+                    </th>
 
-                    <td>
-
-                        <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Ver</a>
-                        <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">Imprimir</a>
-
-                    </td>
+                    <th></th>
                 </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
 
-            }
-        </tbody>
-    </table>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.NumeroCiclo)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Programa)
+                        </td>
 
-</div>
- Página @(Model.PageCount < Model.PageIndex ? 0 : Model.PageIndex) de @Model.PageCount  Total Registros: @Model.TotalRecordCount
-<nav aria-label="Suppliers navigation example">
-    <vc:pager paging-list="@Model" />
-</nav>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.HoraInicio)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.HoraFin)
+                        </td>
+
+                        <td>
+
+                            <a type="button" class="btn btn-info " asp-action="Preview" asp-route-id="@item.Id">Ver</a>
+                            <a type="button" class="btn btn-success " asp-action="Login" asp-route-id="@item.Id">Imprimir</a>
+
+                        </td>
+                    </tr>
+
+                }
+            </tbody>
+        </table>
+
+    </div>
+    Página @(Model.PageCount < Model.PageIndex ? 0 : Model.PageIndex) de @Model.PageCount  Total Registros: @Model.TotalRecordCount
+    <nav aria-label="Suppliers navigation example">
+        <vc:pager paging-list="@Model" />
+    </nav>
 
 
 
 
-@*<nav aria-label="Suppliers navigation example">
-        @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
-    </nav>*@
+    @*<nav aria-label="Suppliers navigation example">
+            @await this.Component.InvokeAsync("Pager", new { pagingList = this.Model })
+        </nav>*@
 
 
 
