--- a/WebResumen/Views/AutoClaveE/Index.cshtml
+++ b/WebResumen/Views/AutoClaveE/Index.cshtml
@@ -25,24 +25,24 @@
 
 }
 
+
 <div class="mt-4">
     @using (Html.BeginForm())
     {
 
-        <form>
-            Buscar por Nº Ciclo: @Html.TextBox("nCiclo")
-            Buscar por Nº Programa: @Html.TextBox("nPrograma")
-            @*Buscar por Fecha:@Html.TextBox("fecha")*@
-            @*Buscar por Fecha:  <input type="date" id="fecha" name="fecha" asp-format="{0:dd/MM/yy}" class="form-control">*@@*@Html.TextBox("fecha")*@
+    <form>
+        Buscar por Nº Ciclo: @Html.TextBox("nCiclo", @Model.RouteValue["nCiclo"])
+        Buscar por Nº Programa: @Html.TextBox("nPrograma", @Model.RouteValue["nPrograma"])
 
-
-            <input type="submit" value="Buscar" />
-        </form>
+        <input type="submit" value="Buscar" />
+    </form>
 
         <a class="btn btn-blue float-right" asp-area="" asp-controller="AutoClaveE" asp-action="CycleList">Listado</a>
 
     }
 </div>
+
+
 <div class="mt-4" style="height: 600px; overflow: auto;">
     <table class="table table-responsive-sm">
         <thead class="thead-dark">
